syntax = "proto2";

package tagset.fine_pos;

// Fine Part of Speech Tags.
enum Tag {
  // Next available id: 35
  UNKNOWN_TAG = 0;
  Abr = 1;
  Adj = 2;
  Adverb = 3;
  ANum = 4;
  Aux=5;
  Conj = 6;
  Demons = 7;
  Det = 8;
  Dup = 9;
  Interj = 10;
  NAdj = 11;
  Neg=12;
  Ness=13;
  NNum = 14;
  Noun = 15;
  PCAbl = 16;
  PCAcc = 17;
  PCDat = 18;
  PCGen = 19;
  PCIns = 20;
  PCNom = 21;
  Pers = 22;
  PostP = 23;
  Prop = 24;
  Punc = 25;
  Quant = 26;
  Ques = 27;
  Reflex = 28;
  Rel = 29;
  Since = 30;
  TOP = 31;
  Verb = 32;
  With = 33;
  Without = 34;
  Zero = 35;
  _ = 36;
}
